test/compile_errors/binary_schema_bad_scaling.zig
const fits = @import("zigfitsio");

comptime {
    _ = fits.BinarySchema(&.{
        .{ .name = "LABEL", .tform = "8A", .tzero = 1 },
    });
}
